# go-embedded

./: CMakeLists.txt  LICENSE
cmake/: FindGo.cmake  libipfs-config.cmake.in
include/: ipfs.h
include/ipfs/: ipfs_embedded.h  ipfs_types.h  libipfs.h
src/: lib.cpp  main.cpp
